# algorythms

./: README.md
dynamic array/: CMakeLists.txt  Hammurabi.cpp
dynamic array/DynamicArray/: CMakeLists.txt  DynamicArray.h  main.cpp
hammurabi/: Hammurabi.cpp
